# Parallel-Pathfinding-Engine

./: .gitattributes  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  constants.h  main.cpp
src/concurrency/: CMakeLists.txt  JoinThreads.h  ThreadPool.h
src/maze/: Choice.h  Direction.cpp  Direction.h  Maze.cpp  Maze.h
src/structures/: Chunk.h  Frontier.h  Message.h  Position.h  Task.h
src/utils/: Timer.h
